src/tests/transcripts/errors/duplicate_argument_names.sif
function a {b} {b}
end function
(-- error
duplicate argument names in function declaration
--)